--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
     
                 <div class="hero-section-right">
                     <div class="absolute icons icon-dots">
-                        <img src=".\images\userassets\dots.png" alt="">
+                        <img src="./images/userAssets/dots.png" alt="">
                     </div>
                     <div class="absolute icons icon-cube">
-                        <img src=".\images\userassets\cube.png" alt="">
+                        <img src="./images/userAssets/cube.png" alt="">
                     </div>
                     <div class="absolute icons icon-circle">
-                        <img src=".\images\userassets\circle.png" alt="">
+                        <img src="./images/userAssets/circle.png" alt="">
                     </div>
                     <div class="absolute icons icon-zigzag">
-                        <img src=".\images\userassets\zigzags.png" alt="">
+                        <img src="./images/userAssets/zigzags.png" alt="">
                     </div>
                     <div class="absolute icons icon-plus">
-                        <img src=".\images\userassets\plus.png" alt="">
+                        <img src="./images/userAssets/plus.png" alt="">
                     </div>
                     <div class="user-image">
                         <img src="./images/userAssets/Prajjwal.jpg" width="345" height="390">
@@ -242,7 +242,7 @@
                 <!-- <img src="./images/stack/ChartJs.svg" alt="" class="skills-logo" />
                 <img src="./images/stack/Bash.svg" alt="" class="skills-logo" />
                 <img src="./images/stack/Docker.svg" alt="" class="skills-logo" />
-                <img src="./images/stack/K8s.svg" alt="" class="skills-logo" /> -->
+                
             </div>
         </div>
 
