--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                 <!-- <img src="./images/stack/ChartJs.svg" alt="" class="skills-logo" />
                 <img src="./images/stack/Bash.svg" alt="" class="skills-logo" />
                 <img src="./images/stack/Docker.svg" alt="" class="skills-logo" />
-                
+                -->
             </div>
         </div>
 
@@ -300,12 +300,12 @@
                     <a href="https://twitter.com/PrajjwalEkhande">
                         <i class="fa-brands fa-twitter icon"></i>
                     </a>
-                    <!-- <a href="">
+                    <a href="">
                         <i class="fa-brands fa-instagram icon"></i>
                     </a>
                     <a href="">
                         <i class="fa-brands fa-envelope icon"></i>
-                    </a> -->
+                    </a> 
                     
                 </div>
             </div>
