--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                         
                     </p>
                     <p>
-                        Skillful in Java, C++, C, Python, and hands-on experience in 
+                        Skillful in Java, C++, and hands-on experience in 
                         web development tools. Also I have a Basic knowledge of SQL queries and Database schema design. Excited to be on a machine learning journey 
                         right now, expanding my skills and exploring the fascinating world of AI. 
                         And what I might lack in skills I make up for with my determination to learn.
