--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio website</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://kit.fontawesome.com/5b4b178a40.js" crossorigin="anonymous"></script></head>
+    <script src="https://kit.fontawesome.com/5b4b178a40.js" crossorigin="anonymous"></script>
+</head>
 <body>
     <div id="wrapper">
         <div class="container">
@@ -78,10 +79,6 @@
                         <div class="project-skill-container">
                             <img src="./images/stack/HTML.png" class="project-skill">
                             <img src="./images/stack/CSS.png" class="project-skill">
-                            <!-- <img src=".\images\userassets\Javascript.svg" class="project-skill">
-                            <img src=".\images\userassets\Express.png" class="project-skill">
-                            <img src=".\images\userassets\NodeJs.svg" class="project-skill">
-                            <img src=".\images\userassets\MongoDB.svg" class="project-skill">                -->
                         </div>
                         <h2 class="project-heading">Razorpay Clone</h2>
                         <p class="project-subheading">I have created a Razorpay website home page
@@ -104,10 +101,7 @@
                         <div class="project-skill-container">
                             <img src="./images/stack/HTML.png" class="project-skill">
                             <img src="./images/stack/CSS.png" class="project-skill">
-                            <!-- <img src=".\images\userassets\Javascript.svg" class="project-skill">
-                            <img src=".\images\userassets\Express.png" class="project-skill">
-                            <img src=".\images\userassets\NodeJs.svg" class="project-skill">
-                            <img src=".\images\userassets\MongoDB.svg" class="project-skill">                -->
+                            
                         </div>
                         <h2 class="project-heading">Discord Clone</h2>
                         <p class="project-subheading">I created a discord website home page clone using
@@ -223,26 +217,18 @@
             </div>
             <div class="skill-container-right">
                 <img src=".\images\userAssets\blob vector.png" class="blob-style" alt="" />
-
                 <img src=".\images\stack\HTML.png" alt="" class="skills-logo" />
                 <img src="./images/stack/CSS.png" alt="" class="skills-logo" />
                 <img src="./images/stack/Javascript.svg" alt="" class="skills-logo" />
                 <img src="./images/stack/React.png" alt="" class="skills-logo" />
                 <img src="./images/stack/NodeJs.svg" alt="" class="skills-logo" />
-                <!-- <img src="./images/stack/Next.svg" alt="" class="skills-logo" />
-                <img src="./images/stack/Redux.svg" alt="" class="skills-logo" /> -->
                 <img src="./images/stack/Tailwind.png" alt="" class="skills-logo" />
-
                 <img src="./images/stack/Express.png" alt="" class="skills-logo" />
                 <img src="./images/stack/Git.svg" alt="" class="skills-logo" />
                 <img src="./images/stack/Github.svg" alt="" class="skills-logo" />
-                <!-- <img src="./images/stack/Graphql.svg" alt="" class="skills-logo" /> -->
                 <img src="./images/stack/MongoDB.svg" alt="" class="skills-logo" />
                 <img src="./images/stack/Vercel.svg" alt="" class="skills-logo" />
-                <!-- <img src="./images/stack/ChartJs.svg" alt="" class="skills-logo" />
-                <img src="./images/stack/Bash.svg" alt="" class="skills-logo" />
-                <img src="./images/stack/Docker.svg" alt="" class="skills-logo" />
-                -->
+                
             </div>
         </div>
 
