--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                         <img src="./images/userAssets/plus.png" alt="">
                     </div>
                     <div class="user-image">
-                        <img src="./images/userAssets/Prajjwal.jpg"  width="345" height="390">
+                        <img src="./images/userAssets/Profile_photo.jpeg"  width="345" height="390">
                     </div>
                 </div>
             </div>
