--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="navbar">
                 <div class=" logo-container">
-                    <div class="logo-text">Prajjwal EKhande</div>
+                    <div class="logo-text">Prajjwal Ekhande</div>
                 </div>
 
                 <div class="nav-item">
@@ -84,11 +84,14 @@
                         <p class="project-subheading">I have created a Razorpay website home page
                             clone using HTML, CSS, and Tailwind CSS.</p>
                         <div class="btn-grp">
-                            <button class="pink-button btn-project">Read More</button>
+                            <a href="https://razorpay-clone-ez3r-git-main-prajjwal-ekhandes-projects.vercel.app/">
+                                <button class="pink-button btn-project">Read More</button>
+                            </a>
+                            
                             <a href="https://github.com/prajjwalek/Razorpay_clone">
                                 <i title="Githublink" class="fa-brands fa-github icon"></i>
                             </a>
-                            <a href="https://razorpay-clone-1x6sy47iu-prajjwal-ekhandes-projects.vercel.app/">
+                            <a href="https://razorpay-clone-ez3r-git-main-prajjwal-ekhandes-projects.vercel.app/">
                                 <i title="Live Link" class="fa-solid fa-link icon"></i>
                             </a>
 
@@ -133,7 +136,9 @@
                         <p class="project-subheading">I have created tic-tac-toe game using HTML, CSS,
                             ANd Javascript.</p>
                         <div class="btn-grp">
-                            <button class="pink-button btn-project">Read More</button>
+                            <a href="https://tic-tac-cm8ws6h6i-prajjwal-ekhandes-projects.vercel.app/">
+                                <button class="pink-button btn-project">Read More</button>
+                            </a>
                             <a href="https://github.com/prajjwalek/Tic-Tac-Toe">
                                 <i title="Githublink" class="fa-brands fa-github icon"></i>
                             </a>
